fixed input box spacing and column lines

--- a/app/assets/stylesheets/questions.css
+++ b/app/assets/stylesheets/questions.css
@@ -7,8 +7,8 @@ html, body {
 nav {
   width: 100%;
   background: #62BFED;
-  padding-top: 2%;
-  padding-bottom: 2%;
+  padding-top: 1%;
+  padding-bottom: 1%;
 }
 
 #name {
@@ -24,7 +24,7 @@ nav {
 
 .leftcol {
   width: 30%;
-  height: auto;
+  height: 100%;
   position: absolute;
 }
 
@@ -33,7 +33,7 @@ nav {
 }
 
 .middlecol {
-  height: 700px;
+  height: 100%;
   width: 40%;
   border-left: 1px solid gray;
   border-right: 1px solid gray;
@@ -43,8 +43,7 @@ nav {
 
 .rightcol {
   width: 30%;
-  height: 700px;
-
+  height: 100%;
 }
 
 p {
@@ -67,12 +66,12 @@ input, select {
 
 .qcontainer {
   margin: 2%;
-  height: 500px;
+  height: 100%;
 }
 
 .mcontainer {
   margin: 2%;
-  height: 500px;
+  height: 100%;
 }
 
 .draggable {
